--- a/projekt/src/App.css
+++ b/projekt/src/App.css
@@ -15,7 +15,7 @@ body {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  max-width: 1130px;
+  max-width: 1250px;
   background: #DAE5EA;
   border-radius: 8px 8px 0 0;
   position: relative; 
@@ -27,9 +27,9 @@ body {
 
 .header {
   width: 100%;
-  height: 150px;
+  height: 180px;
   background: #DAE5EA;	
-  border-radius: 8px 8px 0 0;
+  border-radius: 10px 10px 0 0;
 }
 
 p {
@@ -44,7 +44,7 @@ h1,h2 {
 
 
 header ul {
-	width: 970px;
+	width: 1090px;
     list-style-type: none;
     margin: 0;
     padding: 0 0 0 160px;
@@ -64,32 +64,33 @@ header li a {
     text-align: center;
     padding: 30px 60px;
     text-decoration: none;
+	
 }
 
 header li a:hover {
     background-color: #DAE5EA !important;
-	border-radius: 6px;
-	line-height: 15px;
+	border-radius: 80px;
+	line-height: 10px;
 	margin-top: 5px;
 }
 
 
 
 form {
-	padding-left: 30px;
+	padding-left: 20px;
 }
 
 .logo {
-	height: 150px;
-	width: 250px;
+	height: 180px;
+	width: 290px;
 	position: absolute;
-	left: 0;
+	left: 0px;
 }
 
 .logo_text {
 	float: left;
-	padding-left: 400px;
-	font-size: 38px;
+	padding-left: 550px;
+	font-size: 39px;
 	font-weight: bold;
 	line-height: 150px;
 	color: 	black;
